my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/builtins/strncpy-chk.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/strncpy-chk.c:81:34: warning: adding 'int' to a string does not append to the string [-Wstring-plus-int]
   81 |   if (strncpy (dst, i++ ? "xfoo" + 1 : "bar", 4) != dst
      |                           ~~~~~~~^~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/chk.h:30:33: note: expanded from macro 'strncpy'
   30 |   __builtin___strncpy_chk (dst, src, len, os (dst))
      |                                 ^~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/strncpy-chk.c:81:34: note: use array indexing to silence this warning
   81 |   if (strncpy (dst, i++ ? "xfoo" + 1 : "bar", 4) != dst
      |                                  ^
      |                           &      [
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/chk.h:30:33: note: expanded from macro 'strncpy'
   30 |   __builtin___strncpy_chk (dst, src, len, os (dst))
      |                                 ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/strncpy-chk.c:188:7: error: __builtin_setjmp is not supported for the current target
  188 |   if (__builtin_setjmp (chk_fail_buf) == 0)
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/strncpy-chk.c:193:7: error: __builtin_setjmp is not supported for the current target
  193 |   if (__builtin_setjmp (chk_fail_buf) == 0)
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/strncpy-chk.c:199:7: error: __builtin_setjmp is not supported for the current target
  199 |   if (__builtin_setjmp (chk_fail_buf) == 0)
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/strncpy-chk.c:204:7: error: __builtin_setjmp is not supported for the current target
  204 |   if (__builtin_setjmp (chk_fail_buf) == 0)
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/strncpy-chk.c:201:7: warning: 'strncpy' will always overflow; destination buffer has size 1, but size argument is 2 [-Wbuiltin-memcpy-chk-size]
  201 |       strncpy (&buf3[19], "abc", 2);
      |       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/chk.h:30:3: note: expanded from macro 'strncpy'
   30 |   __builtin___strncpy_chk (dst, src, len, os (dst))
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/strncpy-chk.c:206:7: warning: 'strncpy' will always overflow; destination buffer has size 2, but size argument is 3 [-Wbuiltin-memcpy-chk-size]
  206 |       strncpy (&buf3[18], "", 3);
      |       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/builtins/chk.h:30:3: note: expanded from macro 'strncpy'
   30 |   __builtin___strncpy_chk (dst, src, len, os (dst))
      |   ^
3 warnings and 4 errors generated.
